--- a/all.css
+++ b/all.css
@@ -243,3 +243,110 @@ img{
 .about{
 	align-items: center;
 }
+
+.l-bg{
+	background:linear-gradient(#050014, #01021E);
+}
+
+
+.jc-c{
+	justify-content:center;
+	margin: 0 auto;
+}
+
+.ptpb96{
+	padding-top: 96px;
+	padding-bottom: 96px;
+}
+
+.contact{
+	width: 1296px;
+	justify-content: space-between;
+}
+
+.icon a{
+	border-radius: 40px;
+	box-shadow: 0px 4px 4px 0px #00000040;
+}
+.icon a:hover{
+	box-shadow: 0px 0px 16px 3px #9094FFE5;
+}
+
+.icon{
+	width: 526px;
+	justify-content: space-around;
+}
+
+.contactBlack{
+	background:black;
+	color: white;
+}
+
+.project{
+	margin: 0 auto;
+	width: 1296px;
+	padding: 168px;
+}
+
+.pd-r100{
+	padding-right: 220px;
+}
+
+.align-items-flex-end{
+	align-items: flex-end;
+}
+
+.w416{
+	width: 416px;
+
+}
+
+.h306{
+	height: 306px;
+}
+
+.picText{
+	justify-content: space-between;
+}
+
+
+.rightPicText{
+	justify-content: space-between;
+}
+
+.ml24{
+	margin-left: 24px;
+}
+
+.contactTextP{
+	font-size: 16px;
+}
+
+.contactText a{
+	display: inline-block;
+}
+
+.contactText{
+	justify-content: space-between;
+	margin-left: 24px;
+}
+
+.title{
+	margin-bottom: 20px;
+}
+
+.black-bg{
+	background-color: #000;
+}
+
+.footerText{
+	text-align: center;
+}
+
+.footerText p{
+	padding-top: 40px;
+	padding-bottom: 40px;
+	color:#FFFFFF;
+	line-height: 24px;
+	font-size: 16px;
+}
